translate register page

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -120,21 +120,24 @@
                       <div class="col-md-10">
                         <div class="radio-inline" id="radio-inline-type-1">
                           <label for="type-1">
-                            <input type="radio" id="type-1" name="type" value="1" translate="MAIN.TYPE.ENVELOPE">&nbsp;Envelope&nbsp;
+                            <input type="radio" id="type-1" name="type" value="1">
+                            <span translate="MAIN.DIALOG.TYPE.ENVELOPE"></span>
                             <img src="images/icons/parcel-1.png" style="max-height: 32px;">
                           </label>
                         </div>
 
                         <div class="radio-inline" id="radio-inline-type-2">
                           <label for="type-2">
-                            <input type="radio" id="type-2" name="type" value="2" checked="" translate="MAIN.TYPE.PARCEL">&nbsp;Parcel&nbsp;
+                            <input type="radio" id="type-2" name="type" value="2" checked="">
+                            <span translate="MAIN.DIALOG.TYPE.PARCEL"></span>
                             <img src="images/icons/parcel-2.png" style="max-height: 32px;">
                           </label>
                         </div>
 
                         <div class="radio-inline" id="radio-inline-type-3">
                           <label for="type-3">
-                            <input type="radio" id="type-3" name="type" value="3" translate="MAIN.TYPE.PALLET">&nbsp;Pallet&nbsp;
+                            <input type="radio" id="type-3" name="type" value="3">
+                            <span translate="MAIN.DIALOG.TYPE.PALLET"></span>
                             <img src="images/icons/parcel-3.png" style="max-height: 32px;">
                           </label>
                         </div>
