--- a/app/views/register.html
+++ b/app/views/register.html
@@ -1,26 +1,22 @@
 <div id="wrapper" class="clearfix container">
   <div class="clearfix row">
     <section id="main" class="col-lg-12">
-      <div id="load">
-        <img src="images/loading.gif" alt="Loading...">&nbsp;&nbsp;Please wait...
-      </div>
-
-      <h1>Parcel consignment account</h1>
+      <h1 translate="REGISTER.TITLE">Parcel consignment account</h1>
       <div class="row">
         <div class="col-xs-12 col-sm-6">
           <div class="panel-white panel-white-bordered- clearfix">
-            <h2>Already registered?</h2>
+            <h2 translate="REGISTER.ALREADY">Already registered?</h2>
 
             <form id="LoginForm" class="form-horizontal" role="form" enctype="application/x-www-form-urlencoded" action="http://localhost:32769/en/my-account/login" accept-charset="UTF-8" method="post" onsubmit="validateForm('LoginForm', {'displayErrorMessage': false}); return false;">
               <div class="form-group">
-                <label for="login" class="control-label col-lg-3 required">Email</label>
+                <label for="login" class="control-label col-lg-3 required" translate="LOGIN.EMAIL">Email</label>
                 <div class="col-lg-7">
                   <input type="text" id="login" name="login" class="form-control" value="1CLI1" placeholder="Login" maxlength="100" autocomplete="off">
                 </div>
               </div>
 
               <div class="form-group">
-                <label for="password" class="control-label col-lg-3 required">Password</label>
+                <label for="password" class="control-label col-lg-3 required" translate="LOGIN.PASSWORD">Password</label>
                 <div class="col-lg-7">
                   <input type="password" id="password" name="password" class="form-control" value="upela1" placeholder="Password" maxlength="100" autocomplete="off">
                 </div>
@@ -30,20 +26,22 @@
                 <div class="col-lg-9 col-lg-offset-3">
                   <div class="checkbox" style="padding: 0;">
                     <label for="remember_me" class="">
-                      <input type="checkbox" id="remember_me" name="remember_me" class="" value="1" checked="">Remember me
+                      <input type="checkbox" id="remember_me" name="remember_me" class="" value="1" checked="">
+                      <span  translate="LOGIN.REMEMBER"></span>
                     </label>
                   </div>
 
                   <span class="help-block">
-                    <a href="http://localhost:32769/en/my-account/lost-password">Forgot password?</a>
+                    <a href="#" translate="LOGIN.FORGOT">Forgot password?</a>
                   </span>
                 </div>
               </div>
 
               <div class="form-group">
                 <div class="col-lg-9 col-lg-offset-3">
-                  <button type="submit" class="btn btn-primary" id="btn_login" name="btn_login" onclick="validateForm('LoginForm', {'displayErrorMessage': false}); return false;">
-                    <span class="fa fa-lock"></span> Login
+                  <button type="submit" class="btn btn-primary" id="btn_login" name="btn_login">
+                    <span class="fa fa-lock"></span>
+                    <span translate="LOGIN.LOGIN"></span>
                   </button>
                 </div>
               </div>
@@ -54,10 +52,10 @@
 
         <div class="col-xs-12 col-sm-6">
           <div class="panel-white panel-white-bordered- clearfix">
-            <h2>Open an account</h2>
+            <h2 translate="REGISTER.OPEN">Open an account</h2>
             <form id="RegisterForm" class="form-horizontal">
               <div class="form-group">
-                <label for="email" class="control-label col-lg-3 required">Email</label>
+                <label for="email" class="control-label col-lg-3 required" translate="LOGIN.EMAIL">Email</label>
 
                 <div class="col-lg-7">
                   <input type="text" id="email" name="email" class="form-control validate" data-validate="isEmail" value="" maxlength="100">
@@ -65,14 +63,14 @@
               </div>
 
               <div class="form-group ">
-                <label for="register_password" class="control-label col-lg-3 required">Password</label>
+                <label for="register_password" class="control-label col-lg-3 required" translate="LOGIN.PASSWORD">Password</label>
                 <div class="col-lg-7">
                   <input type="password" id="register_password" name="password" class="form-control validate" data-validate="isPassword" value="" maxlength="15">
                 </div>
               </div>
 
               <div class="form-group ">
-                <label for="password2" class="control-label col-lg-3 required">Confirm password</label>
+                <label for="password2" class="control-label col-lg-3 required" translate="REGISTER.CONFIRM">Confirm password</label>
                 <div class="col-lg-7">
                   <input type="password" id="password2" name="password2" class="form-control" value="" maxlength="100">
                 </div>
@@ -97,19 +95,22 @@
 
               <div class="form-group">
                 <div class="col-lg-9 col-lg-offset-3">
-                  <p class="help-block">We need extra information about you as a company to validate a professional account.  You will be asked to enter your company registration number and EU VATIN number.  No other distinction is made by Upela.<br>
-                    <a class="text-underline" href="#" onclick="showPageInPopup('http://localhost:32769/en/pro-account-send-parcel-24.html'); return false;">What are the advantages of a pro account?</a>
+                  <p class="help-block">
+                    <p translate="REGISTER.COMMENT"></p>
+                    <a class="text-underline" href="#" translate="REGISTER.ADVANTAGE">What are the advantages of a pro account?</a>
                   </p>
                 </div>
               </div>
 
               <div class="form-group">
                 <div class="col-lg-9 col-lg-offset-3">
-                  <button type="submit" class="btn btn-primary" id="btn_register_perso" name="btn_register_perso" onclick="$('#address_pro-0').prop('checked', true); validateForm('RegisterForm', {'displayErrorMessage': false}); return false;">
-                    <span class="fa fa-user"></span> Personnal account
+                  <button type="submit" class="btn btn-primary" id="btn_register_perso" name="btn_register_perso">
+                    <span class="fa fa-user"></span>
+                    <span translate="REGISTER.PERSONAL"></span>
                   </button>&nbsp;&nbsp;
-                  <button type="submit" class="btn btn-primary" id="btn_register_pro" name="btn_register_pro" onclick="$('#address_pro-1').prop('checked', true); validateForm('RegisterForm', {'displayErrorMessage': false}); return false;">
-                    <span class="fa fa-user"></span> Professional account
+                  <button type="submit" class="btn btn-primary" id="btn_register_pro" name="btn_register_pro">
+                    <span class="fa fa-user"></span>
+                    <span translate="REGISTER.PROFESSIONAL"></span>
                   </button>
                 </div>
               </div>
