translate order-progress page

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -12,7 +12,7 @@
                   <div class="espace-pro-headline2" style="margin-bottom: 10px;" translate="MAIN.PAGES.PAGE_ONE.TEXT">
                     Centralize all your sendings<br>Save time, avoid mistakes
                   </div>
-                  <a class="btn btn-orange" href="#">See all our connectors</a>
+                  <a class="btn btn-orange" href="#" translate="MAIN.PAGES.PAGE_ONE.BUTTON_TEXT">See all our connectors</a>
                 </div>
               </div>
               <div class="item active" style="background-image: url('images/files/upload/home/slider/slide2.jpg');">
@@ -21,7 +21,7 @@
                   <div class="espace-pro-headline" translate="MAIN.PAGES.PAGE_TWO.TEXT">
                     +20,000 customers<br> Immediate discounts <br> Deferred payment by Sepa
                   </div>
-                  <a class="btn btn-orange" href="#">Create a professional account</a>
+                  <a class="btn btn-orange" href="#" translate="MAIN.PAGES.PAGE_TWO.BUTTON_TEXT">Create a professional account</a>
                 </div>
               </div>
               <div class="item" style="background-image: url('images/files/upload/home/slider/slide1.jpg');">
