--- a/app/views/order-progress.html
+++ b/app/views/order-progress.html
@@ -1,14 +1,14 @@
 <div class="container panel-white" id="progress-container">
   <br>
   <center>
-    <h3 style="font-weight: normal;">PLEASE BE PATIENT <br>WHILE WE ARE LOOKING FOR THE BEST OFFERS</h3>
+    <h3 style="font-weight: normal;" translate="ORDER_PROGRESS.TITLE">PLEASE BE PATIENT <br>WHILE WE ARE LOOKING FOR THE BEST OFFERS</h3>
     <div id="progress-container" class="progress" style="width: 250px; margin: 0 auto;">
       <div id="jauge" class="progress-bar progress-bar-striped progress-bar-upela active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
     </div>
     <br><img src="images/files/upload/progress/upela-logo.jpg" alt="Upela">
-    <h3 class="text-center orange">Send your envelopes, parcels and pallets all over the world!</h3>
+    <h3 class="text-center orange" translate="ORDER_PROGRESS.WORLD_LOGO">Send your envelopes, parcels and pallets all over the world!</h3>
     <br> <img class="img-responsive" src="images/files/upload/progress/UPELA-WORLDWIDE-AIR-SHIPPING-SERVICE.jpg" ng-click="clickImage()"><br>
-    <h4 class="orange text-uppercase">Did you know&nbsp;?</h4>
-    <h4 class="text-uppercase">BY CREATING A UPELA ACCOUNT, YOU WILL BENEFIT FROM AN IMMEDIATE DISCOUNT!</h4>
+    <h4 class="orange text-uppercase" translate="ORDER_PROGRESS.MID_LOGO">Did you know&nbsp;?</h4>
+    <h4 class="text-uppercase" translate="ORDER_PROGRESS.FOOTER"></h4>
   </center>
 </div>
