--- a/app/views/topbar.html
+++ b/app/views/topbar.html
@@ -93,7 +93,7 @@
         </li>
 
         <li ng-if="!IsLoggedIn">
-          <a ng-click="login()">
+          <a href="" ng-click="login()">
             <span class="glyphicon glyphicon-user"></span>
             <span translate="MAIN.MENU.LOGIN"></span>
           </a>
@@ -107,7 +107,7 @@
         </li>
 
         <li class="dropdown" ng-if="IsLoggedIn">
-          <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
+          <a href="" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
             <span class="glyphicon glyphicon-user"></span> _CLI1
             <span class="caret"></span>
           </a>
@@ -122,7 +122,7 @@
         </li>
 
         <li class="dropdown" ng-if="IsLoggedIn">
-          <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+          <a href="" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
             <span class="glyphicon glyphicon-th"></span>
             <span translate="MAIN.MENU.ACCOUNT"></span>
             <span class="caret"></span>
