--- a/app/views/main.html
+++ b/app/views/main.html
@@ -259,7 +259,9 @@
                         <div class="input-group">
                           <input type="text" class="form-control" uib-datepicker-popup="{{format}}" ng-model="shipDate" is-open="popup.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
                           <span class="input-group-btn">
-                            <button type="button" class="btn btn-default" ng-click="openDate()"><i class="glyphicon glyphicon-calendar"></i></button>
+                            <button type="button" class="btn btn-default" ng-click="openDate()">
+                              <i class="glyphicon glyphicon-calendar"></i>
+                            </button>
                           </span>
                         </div>
 
